--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.digital</groupId>
-    <artifactId>Winter2022TAF</artifactId>
+    <artifactId>TalentLMSWinter2022</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
