--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-browser = sauce_Mac_Safari
+browser = sauce_mac_safari
 login = kubanych
 password = kubanazar89
 applicationUrl=https://nuta1bema.talentlms.com/
