added new tests

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 browser = Chrome
 applicationUrl=https://nuta1bema.talentlms.com/
-applicationUrl2=https://burulai.talentlms.com/dashboard
-login = burulainarzieva2
-password = burulainarzieva2
+#applicationUrl2=https://burulai.talentlms.com/dashboard
+#login = burulainarzieva2
+#password = burulainarzieva2
