--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
             <version>5.3.2</version>
         </dependency>
 
+
         <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
         <dependency>
             <groupId>com.github.javafaker</groupId>
@@ -68,6 +69,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+
+        <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
+        <dependency>
+            <groupId>com.mailosaur</groupId>
+            <artifactId>mailosaur-java</artifactId>
+            <version>7.12.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.aspectj</groupId>
