--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
-browser = sauce_mac_safari
+browser = chrome
 login = kubanych
 password = kubanazar89
 applicationUrl=https://nuta1bema.talentlms.com/
 applicationUrl2=https://kubabeck.talentlms.com/dashboard/index/role:administrator
-headless=true
+headless=false
