--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 
 browser = chrome
-applicationUrl=https://nuta1bema.talentlms.com/
-headless = true
-login = nuta1bema
-password = nuta1bema
+applicationUrl=https://aiperiqa.talentlms.com/
+headless = false
+login = aiperi
+password = 123456Qwerty
 
 
