--- a/pom.xml
+++ b/pom.xml
@@ -88,12 +88,7 @@
 
 
 
-        <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
-        <dependency>
-            <groupId>com.mailosaur</groupId>
-            <artifactId>mailosaur-java</artifactId>
-            <version>7.12.0</version>
-        </dependency>
+
 
 
         <dependency>
@@ -130,7 +125,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.17.0</version>
+            <version>2.20.0</version>
         </dependency>
 
 
@@ -142,9 +137,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>${mvn.source.version}</source>
-                    <target>${mvn.target.version}</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
 
