--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,7 @@
 browser = Chrome
-applicationUrl=https://nuta1bema.talentlms.com/
+applicationUrl = https://nuta1bema.talentlms.com/
+login = testtalant
+password = Testtalant555
+applicationUrl2 = https://testtalant.talentlms.com/index
+
+headless = true
