--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mailosaur</groupId>
+            <artifactId>mailosaur-java</artifactId>
+            <version>7.12.0</version>
+        </dependency>
 
     </dependencies>
 
