--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,5 @@
 browser = chrome
-applicationUrl=https://aiperiqa.talentlms.com/
-headless = false
-login = aiperi
-password = 123456Qwerty
-
-
+applicationUrl=https://nuta1bema.talentlms.com/
+headless = true
+login = nuta1bema
+password = nuta1bema
