--- a/pom.xml
+++ b/pom.xml
@@ -142,9 +142,16 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
+            <version>2.17.0</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
+        <dependency>
+            <groupId>com.mailosaur</groupId>
+            <artifactId>mailosaur-java</artifactId>
+            <version>7.12.0</version>
+        </dependency>
 
 
     </dependencies>
@@ -156,8 +163,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${mvn.source.version}</source>
+                    <target>${mvn.source.version}</target>
                 </configuration>
             </plugin>
 
