--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,3 +3,9 @@ applicationUrl=https://nuta1bema.talentlms.com/
 headless = true
 login = nuta1bema
 password = nuta1bema
+
+###### Data Base########################
+server=localhost
+port=3306
+DBuser=root
+DBpassword=admin
