--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.19</aspectj.version>
         <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
@@ -19,8 +19,8 @@
         <resultsPatternAllure>**/allure-results</resultsPatternAllure>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <selenium.version>4.1.3</selenium.version>
-        <mvn.source.version>1.8</mvn.source.version>
-        <mvn.target.version>1.8</mvn.target.version>
+        <mvn.source.version>11</mvn.source.version>
+        <mvn.target.version>11</mvn.target.version>
         <testng.version>7.5</testng.version>
         <aspectj.version>1.9.19</aspectj.version>
         <webdrivermanager.version>5.1.0</webdrivermanager.version>
@@ -99,6 +99,18 @@
             <groupId>com.mailosaur</groupId>
             <artifactId>mailosaur-java</artifactId>
             <version>7.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils -->
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.7</version>
         </dependency>
 
     </dependencies>
