--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,8 @@
 browser = chrome
-applicationUrl=https://nuta1bema.talentlms.com/
-headless = true
-login = nuta1bema
-password = nuta1bema
+applicationUrl=https://kubabeck.talentlms.com/dashboard/index/role:administrator
+login = kubanych
+password = kubanazar89
+#applicationUrl=https://nuta1bema.talentlms.com/
+#headless = true
+#login = nuta1bema
+#password = nuta1bema
