--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
             <version>7.12.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
