--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,10 @@
-browser = chrome
+browser=chrome
 applicationUrl=https://nuta1bema.talentlms.com/
-headless = true
-login = nuta1bema
-password = nuta1bema
-
+headless=true
+login=nuta1bema
+password=nuta1bema
+apiUrl=https://aisana.talentlms.com
+apiKey=trBblAXp821n7gWF77KX7KEqlUaCa5
 ###### Data Base########################
 server=localhost
 port=3306
